Fixes list-group.action against default bg color of buttons on Safari

--- a/src/scss/_list_group.scss
+++ b/src/scss/_list_group.scss
@@ -95,6 +95,7 @@ $list-group-footer-font-size: $font-size-sm;
         text-decoration: inherit;
         appearance: none;
         color: inherit;
+        background-color: transparent;
         border: 0 none;
         outline: none;
         margin: 0;
